--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.15.2",
+    "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.3",
